--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -12,10 +12,17 @@
         <attr name="startAngle" format="float" />
         <attr name="sweepAngle" format="float" />
     </declare-styleable>
-    
+    <declare-styleable name="LegendItem">
+        <attr name="shapeColor" />
+        <attr name="label" />
+        <attr name="labelColor" />
+        <attr name="labelSize" />
+        <attr name="gap" format="dimension" />
+    </declare-styleable>
+
     <!-- widget -->
     <declare-styleable name="PieChart">
-        <attr name="gap" format="dimension" />
+        <attr name="gap" />
     </declare-styleable>
 
 </resources>
