--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -12,6 +12,9 @@
         <attr name="startAngle" format="float" />
         <attr name="sweepAngle" format="float" />
     </declare-styleable>
+    <declare-styleable name="Pie3D">
+        <attr name="depth" format="float" />
+    </declare-styleable>
     <declare-styleable name="LegendItem">
         <attr name="shapeColor" />
         <attr name="label" />
